major revision - Stats
2024-02-25: Edited the codes for the first-round major revision for submission to the Stats journal.

--- a/table1/tab.tex
+++ b/table1/tab.tex
@@ -8,6 +8,14 @@
 \cmidrule(l{3pt}r{3pt}){3-5} \cmidrule(l{3pt}r{3pt}){6-8}
 \multicolumn{1}{c}{sample size} & \multicolumn{1}{c}{parameter} & \multicolumn{1}{c}{point.est} & \multicolumn{1}{c}{$\widehat{\text{s.d.}}$} & \multicolumn{1}{c}{s.d.} & \multicolumn{1}{c}{point.est} & \multicolumn{1}{c}{$\widehat{\text{s.d.}}$} & \multicolumn{1}{c}{s.d.}\\
 \midrule
+ & $\theta$ & 0.9899 & 0.1965(0.0040) & 0.2091 & 0.9651 & 0.2504(0.0018) & 0.2238\\
+\cmidrule{2-8}
+ & $\sigma_1$ & 1.1059 & 0.2723(0.0077) & 0.4190 & 1.0450 & 0.6382(0.0230) & 0.2959\\
+\cmidrule{2-8}
+ & $\sigma_2$ & 1.0473 & 0.1918(0.0049) & 0.2161 & 1.0823 & 0.4587(0.0212) & 0.4648\\
+\cmidrule{2-8}
+\multirow{-4}{*}{\raggedright\arraybackslash $n=50$} & $w_1$ & 0.4107 & 0.1897(0.0046) & 0.2065 & 0.4348 & 0.2074(0.0012) & 0.1865\\
+\cmidrule{1-8}
  & $\theta$ & 0.0018 & 0.1982(0.0020) & 0.2009 & 0.0131 & 0.2048(0.0015) & 0.2026\\
 \cmidrule{2-8}
  & $\sigma_1$ & 0.9789 & 0.2035(0.0041) & 0.2162 & 1.0141 & 0.2239(0.0027) & 0.2141\\
