correct a topo in the LaTeX code
2024-02-25: Please note that curly braces \{ and \} are not supported in README files on GitHub.

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,8 +15,8 @@ The probability density function (pdf) of the flexible Gumbel distribution is gi
 
 $$
 \begin{aligned}
-f(y)= & w \times \frac{1}{\sigma_1} \exp \{-\frac{x-\theta}{\sigma_1}-\exp (-\frac{x-\theta}{\sigma_1})\}+ \\
-& (1-w) \times \frac{1}{\sigma_2} \exp \{\frac{x-\theta}{\sigma_2}-\exp (\frac{x-\theta}{\sigma_2})\},
+f(y)= & w \times \frac{1}{\sigma_1} \exp [-\frac{x-\theta}{\sigma_1}-\exp (-\frac{x-\theta}{\sigma_1})]+ \\
+& (1-w) \times \frac{1}{\sigma_2} \exp [\frac{x-\theta}{\sigma_2}-\exp (\frac{x-\theta}{\sigma_2})],
 \end{aligned}
 $$
 
